--- a/arch/x86/configs/arch_defconfig
+++ b/arch/x86/configs/arch_defconfig
@@ -441,7 +441,7 @@ CONFIG_ACRN_GUEST=y
 CONFIG_BHYVE_GUEST=y
 CONFIG_INTEL_TDX_GUEST=y
 CONFIG_CC_HAS_MARCH_NATIVE=y
-# CONFIG_X86_NATIVE_CPU is not set
+CONFIG_X86_NATIVE_CPU=y
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_TSC=y
@@ -565,6 +565,7 @@ CONFIG_X86_NEED_RELOCS=y
 CONFIG_PHYSICAL_ALIGN=0x200000
 CONFIG_RANDOMIZE_MEMORY=y
 CONFIG_RANDOMIZE_MEMORY_PHYSICAL_PADDING=0xa
+# CONFIG_ADDRESS_MASKING is not set
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_COMPAT_VDSO is not set
 CONFIG_LEGACY_VSYSCALL_XONLY=y
@@ -586,36 +587,7 @@ CONFIG_CC_HAS_RETURN_THUNK=y
 CONFIG_CC_HAS_ENTRY_PADDING=y
 CONFIG_FUNCTION_PADDING_CFI=11
 CONFIG_FUNCTION_PADDING_BYTES=16
-CONFIG_CALL_PADDING=y
-CONFIG_HAVE_CALL_THUNKS=y
-CONFIG_CALL_THUNKS=y
-CONFIG_PREFIX_SYMBOLS=y
-CONFIG_CPU_MITIGATIONS=y
-CONFIG_MITIGATION_PAGE_TABLE_ISOLATION=y
-CONFIG_MITIGATION_RETPOLINE=y
-CONFIG_MITIGATION_RETHUNK=y
-CONFIG_MITIGATION_UNRET_ENTRY=y
-CONFIG_MITIGATION_CALL_DEPTH_TRACKING=y
-# CONFIG_CALL_THUNKS_DEBUG is not set
-CONFIG_MITIGATION_IBPB_ENTRY=y
-CONFIG_MITIGATION_IBRS_ENTRY=y
-CONFIG_MITIGATION_SRSO=y
-CONFIG_MITIGATION_SLS=y
-CONFIG_MITIGATION_GDS=y
-CONFIG_MITIGATION_RFDS=y
-CONFIG_MITIGATION_SPECTRE_BHI=y
-CONFIG_MITIGATION_MDS=y
-CONFIG_MITIGATION_TAA=y
-CONFIG_MITIGATION_MMIO_STALE_DATA=y
-CONFIG_MITIGATION_L1TF=y
-CONFIG_MITIGATION_RETBLEED=y
-CONFIG_MITIGATION_SPECTRE_V1=y
-CONFIG_MITIGATION_SPECTRE_V2=y
-CONFIG_MITIGATION_SRBDS=y
-CONFIG_MITIGATION_SSB=y
-CONFIG_MITIGATION_ITS=y
-CONFIG_MITIGATION_TSA=y
-CONFIG_MITIGATION_VMSCAPE=y
+# CONFIG_CPU_MITIGATIONS is not set
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
@@ -864,6 +836,12 @@ CONFIG_X86_DISABLED_FEATURE_VME=y
 CONFIG_X86_DISABLED_FEATURE_K6_MTRR=y
 CONFIG_X86_DISABLED_FEATURE_CYRIX_ARR=y
 CONFIG_X86_DISABLED_FEATURE_CENTAUR_MCR=y
+CONFIG_X86_DISABLED_FEATURE_PTI=y
+CONFIG_X86_DISABLED_FEATURE_RETPOLINE=y
+CONFIG_X86_DISABLED_FEATURE_RETPOLINE_LFENCE=y
+CONFIG_X86_DISABLED_FEATURE_RETHUNK=y
+CONFIG_X86_DISABLED_FEATURE_UNRET=y
+CONFIG_X86_DISABLED_FEATURE_CALL_DEPTH=y
 CONFIG_X86_DISABLED_FEATURE_LAM=y
 CONFIG_AS_WRUSS=y
 CONFIG_ARCH_CONFIGURES_CPU_MITIGATIONS=y
@@ -1055,7 +1033,6 @@ CONFIG_FUNCTION_ALIGNMENT_16B=y
 CONFIG_FUNCTION_ALIGNMENT=16
 CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
 CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
-CONFIG_ARCH_HAS_CPU_ATTACK_VECTORS=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
